--- a/www/css/style.css
+++ b/www/css/style.css
@@ -5,10 +5,28 @@
 }
 
 input, select, textarea {
-    width: 65%;
+    width: 100%;
+    background-color: #f8f8f8;
 }
 
 .col .button.button-block, .col .button.button-full {
     margin-top: 0;
     margin-bottom: 0;
+}
+
+.item-input-inset {
+    padding: 8px;
+}
+.item-input-inset .item-input-wrapper {
+    background-color: transparent;
+}
+.item-input-inset .item-input-wrapper input,
+.item-input-inset .item-input-wrapper select,
+textarea {
+    background-color: #e4e5e7;
+}
+.item-input-inset .item-input-wrapper input[readonly],
+.item-input-inset .item-input-wrapper select[readonly],
+.item-input-inset .item-input-wrapper textarea[readonly] {
+    background-color: #f8f8f8;
 }
