--- a/www/templates/records.html
+++ b/www/templates/records.html
@@ -60,7 +60,7 @@
                     <li class="item item-toggle">
                         Baterias
                         <label class="toggle toggle-positive">
-                            <input type="checkbox">
+                            <input type="checkbox" ng-model="filters.applyForBattery">
                             <div class="track">
                                 <div class="handle"></div>
                             </div>
@@ -71,7 +71,7 @@
                     <li class="item item-toggle">
                         Cargadores
                         <label class="toggle toggle-positive">
-                            <input type="checkbox">
+                            <input type="checkbox" ng-model="filters.applyForCharger">
                             <div class="track">
                                 <div class="handle"></div>
                             </div>
