--- a/www/templates/new.html
+++ b/www/templates/new.html
@@ -266,7 +266,7 @@
         <ion-tab title="Inspección física" icon="ion-clipboard" hidden="{{ !(tabs.physicalInspectionTab())}}">
             <ion-content padding="true" class="has-header">
                 <form>
-                    <div ng-repeat="cl in checkList| orderBy: checkOrder">
+                    <div ng-repeat="cl in checkList| orderBy: 'checkOrder'">
                         <div class="item item-input-inset">
                             <label class="item-input-wrapper">
                                 <span class="input-label">{{ cl.checkName}}</span>
@@ -286,8 +286,32 @@
         <ion-tab title="Inspección de celdas" icon="ion-battery-empty" hidden="{{ !(tabs.cellInspectionTab())}}">
             <ion-content padding="true" class="has-header">
                 <form>
-                    <ion-list>
-                    </ion-list>
+                    <div class="row" ng-repeat="cr in reviewOfCells| orderBy: 'cellOrder'">
+                        <div class="col col-10">
+                            # {{ cr.cellOrder}}
+                        </div>
+                        <div class="col col-10">
+                            <div class="item item-input-inset">
+                                <label class="item-input-wrapper">
+                                    <input type="number" placeholder="Voltaje" ng-model="cr.voltage">
+                                </label>
+                            </div>
+                        </div>
+                        <div class="col col-10">
+                            <div class="item item-input-inset">
+                                <label class="item-input-wrapper">
+                                    <input type="number" placeholder="Densidad" ng-model="cr.density">
+                                </label>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="item item-input-inset">
+                                <label class="item-input-wrapper">
+                                    <input type="text" placeholder="Comentarios" ng-model="cr.comments">
+                                </label>
+                            </div>
+                        </div>
+                    </div>
                 </form>
             </ion-content>
         </ion-tab>
@@ -309,9 +333,9 @@
         <ion-tab title="Finalizar" icon="ion-checkmark" hidden="{{ !(tabs.endingTab())}}">
             <ion-content padding="true" class="has-header">
                 <form>
-                    <p>Por ahora no se hace nada</p>
-                    <button class="button button-small" ng-click="saveMaintenance()">
+                    <button class="button" ng-click="saveMaintenance()">
                         <i class="icon ion-checkmark"></i>
+                        Guardar todos los cambios realizados
                     </button>
                 </form>
             </ion-content>
