Mejoras en los controllers

--- a/www/templates/records.html
+++ b/www/templates/records.html
@@ -79,7 +79,7 @@
                     </li>
                 </div>
                 <div class="col">
-                    <button class="button button-block button-positive" ng-click="searchHistory()">
+                    <button class="button button-block button-positive" ng-click="searchHistory()" ng-disabled="runningProcess">
                         Buscar
                     </button>
                 </div>
