--- a/www/css/style.css
+++ b/www/css/style.css
@@ -42,3 +42,19 @@ textarea[readonly] {
 	z-index: 1000;
 	position: absolute;
 }
+
+.console-item {
+    padding: 8px;
+}
+.console-item .level-1 {
+    color: red;
+}
+.console-item .level-2 {
+    color: orange;
+}
+.console-item .level-3 {
+    color: blue;
+}
+.console-item .level-4 {
+    color: green;
+}
